Rate Limit/ Get info para o Summary

--- a/.env.exemple
+++ b/.env.exemple
@@ -6,3 +6,7 @@ DATABASE_URL= ......
 
 ## Login Clerk
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=.........
+
+## RATE LIMITING
+UPSTASH_REDIS_REST_URL=............................
+UPSTASH_REDIS_REST_TOKEN=...........................
